make view full mode condition a bit more specific

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           <p>We would like your application to load a number of charts (4+ depending upon your thumbnail size and application design) on a page. These charts should adhere to these conditions:</p>
           <ul>
               <li>All charts should be in thumbnail mode on the initial page</li>
-              <li>All charts should be given a full view mode (lightbox or new page)</li>
+              <li>All charts should be given a full view mode (lightbox or new page). If you can do this via routes, that would be awesome.</li>
               <li>All charts should be able to switch something simple, such as the chart type or chart name. <em>Persistent data isn't expected to be implemented if you're using JSON files</em></li>
               <li>The chart data should be pulled from a resource. A simple .json file would suffice</li>
           </ul>
